# cross_compile_cmake

./: CMakeLists.txt  README.md  do_stuff.sh
src/: hello.cpp
toolchains/: 32bit-toolchain.cmake  64bit-toolchain.cmake
